--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Atish Singh",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "mysql": "^2.18.1"
   }
 }
