--- a/Backend/package.json
+++ b/Backend/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "type":"module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
@@ -10,7 +11,7 @@
   "author": "Atish Singh",
   "license": "ISC",
   "dependencies": {
-    "cookie-parser": "^1.4.6",
+    
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
